[package]
name = "mjpeg-digest-auth-proxy"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive"] }
diqwest = "3.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.18", features = ["stream"] }
tokio = { version = "1.45.1", features = ["full"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
